# ropencv

./: .gitignore  .yardopts  CMakeLists.txt  License.txt  README.md  generate.rb  manifest.xml  match_keypoints.rb  ropencv.gemspec
doc/opencv2_49/: ropencv.rb  ropencv_ruby.rb  ropencv_types.rb
examples/: affine3d.rb  file_storage.rb  find_homography.rb  find_keypoints.rb  grabcut.rb  harr_cascade.rb  hog_descriptor.rb  hough_circles.rb  match_keypoints.rb  polyfit.rb  scalar.rb  test.rb  triangulate.rb  video2images.rb
ext/: CMakeLists.txt  extconf.rb  generate.rb  generate_opencv.rb  helper.rb  opencv.txt  opencv.yml  opencv2.txt  parser_out.txt  post_opencv244.txt  post_opencv249.txt  post_opencv300.txt  post_opencv300a.txt  post_opencv310.txt  post_opencv400.txt  pre_opencv244.txt  rbind.pc.in  rbind.rb  specializing.rb
ext/src/: CMakeLists.txt
ext/src/cmake/: FindGem.cmake  FindRuby.cmake
lib/: ropencv.rb
lib/opencv/: opencv_ruby.rb
lib/ropencv/: ropencv_ruby.rb
lib/ruby/ropencv/: ropencv_ruby.rb
test/: suite.rb  test_helper.rb  test_mat.rb  test_opencv.rb  test_recognizer.rb  test_scalar.rb  test_triangulate_points.rb  test_vec.rb  test_vector.rb
